--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "shop-backend",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "app.js",
 	"type": "module",
 	"scripts": {
-		"serve": "nodemon index.js"
+		"serve": "nodemon app.js"
 	},
 	"keywords": [],
 	"author": "",
